--- a/release/application/index/view/index/index.html
+++ b/release/application/index/view/index/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>采集</title>
 </head>
+
 <body>
     <h4><a href="{:url('index/wenshu')}" target="_blank">裁判文书网</a></h4>
     <h4><a href="{:url('index/gpai')}" target="_blank">公拍网</a></h4>
+    <h4><a href="{:url('index/taobao')}" target="_blank">阿里拍卖</a></h4>
+    <h4><a href="{:url('index/ggzy')}" target="_blank">全国公共资源交易平台</a></h4>
+    <h4><a href="{:url('index/tjlandmarket')}" target="_blank">天津土地交易中心</a></h4>
 </body>
+
 </html>
